RESOLVED FIXED287747
HistoryController no longer needs to subclass CanMakeCheckedPtr
https://bugs.webkit.org/show_bug.cgi?id=287747
Summary HistoryController no longer needs to subclass CanMakeCheckedPtr
Chris Dumez
Reported 2025-02-14 19:49:05 PST
HistoryController no longer needs to subclass CanMakeCheckedPtr now that it is ref-counted.
Attachments
Chris Dumez
Comment 1 2025-02-14 20:08:32 PST
EWS
Comment 2 2025-02-15 10:24:39 PST
Committed 290444@main (b07b64948e9e): <https://commits.webkit.org/290444@main> Reviewed commits have been landed. Closing PR #40659 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-02-15 10:25:15 PST
Note You need to log in before you can comment on or make changes to this bug.